내용 조금 수정

--- a/_posts/2021-06-29-summary.md
+++ b/_posts/2021-06-29-summary.md
@@ -18,14 +18,16 @@ last_modified_at: 2021-06-29
 ## 기획
 ### 제품 개발의 내적 동기
 ### 제품 아이디어 정리
-### 가설 및 가설 검증 전략 세팅
+### 가설 설정 및 가설 검증 전략 세팅
 
 ## 개발
 ### 최소한의 기능 정리 
 ### 기능 실현을 위한 노코드 툴 List화
-### 스토리보드 & 와이어프레임 작성
+### 스토리보드 작성
+### 와이어프레임 작성 
 ### 제품 제작
 ## 마케팅 & 검증
-### 홍보물 제작 및 홍보채널 List화
-### 베타 테스트
+### 홍보물 제작 
+### 홍보채널 List화
+### 홍보물 배포
 ### 가설 검증 데이터 결과 정리
