--- a/_posts/2021-06-30-daily2.md
+++ b/_posts/2021-06-30-daily2.md
@@ -29,3 +29,5 @@ last_modified_at: 2021-06-30
 #### 내가 결정한 문제에 대한 가설 검증
 내가 결정한 문제가 과연 얼마나 공감을 받을 수 있을지 아는 것이 중요하다고 생각해서 `Disquiet`에서 1위를 하고 있던 [도다 툴](https://www.dodatool.com/)을 활용해서 `창업가 레벨 테스트`라는 것을 진행해보려고 한다.
 
+찾아보니까 아쉽게도 [도다 툴](https://www.dodatool.com/)은 아직 애널리틱스 기능이 없어 결과 값에 대한 보고를 받을 수 없어서 [개발자 없이 바이럴 콘텐츠 만드는 법](https://brunch.co.kr/@theciriz/13)를 참고해서 [Typeform](https://www.typeform.com/?&tf_campaign=brand_9724248146_v2&tf_source=google&tf_medium=paid&tf_content=101060307818_427947667108&tf_term=typeform&tf_dv=c&tf_matchtype=e&tf_adposition=&gclid=CjwKCAjwrPCGBhALEiwAUl9X07vNxOH57dJDUS02lsvmZxIvTImKLwR39AcCrNePLRF_Yj-KueJIpBoCu78QAvD_BwE&gclsrc=aw.ds)을 사용하기로 했다.
+
