--- a/_posts/2021-06-29-summary.md
+++ b/_posts/2021-06-29-summary.md
@@ -1,5 +1,5 @@
 ---
-title: "예상 프로덕트 개발 순서 (07.02 수정)"
+title: "예상 프로덕트 개발 순서 (07.03 수정)"
 excerpt: "웹 형 어플리케이션 제작을 위한 A to Z 가이드라인"
 
 tags:
@@ -13,8 +13,11 @@ toc_sticky: true
 date: 2021-06-29
 last_modified_at: 2021-06-29
 ---
+## 7월 2일 초안
 ![07-02-plan-summary](https://user-images.githubusercontent.com/73425926/124282547-e986f000-db85-11eb-90c6-7462598ad7e4.jpg)
 
+## 7월 3일 1차 수정안
+![07-03-product-plan](https://user-images.githubusercontent.com/73425926/124357086-96c83980-dc54-11eb-84f4-f4ce2da671b0.jpg)
 ## 기획
 ### 제품 개발의 내적 동기
 ### 제품 아이디어 정리
