--- a/_posts/2021-07-14-feedback.md
+++ b/_posts/2021-07-14-feedback.md
@@ -13,3 +13,31 @@ toc_sticky: true
 date: 2021-07-14
 last_modified_at: 2021-07-14
 ---
+## 창업 아이템 고르기
+이번에 `쉐도우 복서`라는 서비스를 만들어보면서 느낀 점은
+1. `내가 진짜 겪은 문제라서 죽어도 해결해야한다고 생각하거나`
+대표적인 사례로 `클라썸` 같은 사례가 있다고 생각한다. 
+2. `진짜 큰 시장이라서 들어가도 괜찮거나`
+
+개인적으로 이 두 가지를 모두 만족해야 창업 서비스가 작동하지 않을까? 생각한다. 
+
+아마 이번 서비스에서 내가 잡은 `포인트`는
+1. 창업에 도전하고 싶은데 어떤 식으로 시작부터 해야할 지 모르는 대학생이 많다.
+2. 카피캣 교육 커리큘럼이 어느정도 창업의 프레임을 잡는데 도움을 줄 것이다.
+
+근데 실제 결과로는
+1. 유료료 참여할만큼 니즈가 크지 않다.
+
+## 다시 나를 돌아보기
+근데 문득 나는 이런 생각이 크게 들었다. 내가 `창업`을 하고 싶은 것은 확실하다.
+1. 내가 문제를 규정하고 해당 해결책이 세상에 영향을 끼칠 수 있기 때문이다.
+
+그래서 왜 내가 이렇게 `IT 서비스`에 집착하고 있는지 다시 한 번 고민하기 시작했다. 스스로 생각하기에 나에게 현재까지 주어진 선택지는 크게 두 개라고 생각한다.
+1. IT 서비스
+2. 제조업 (기계공학)
+
+## 앞으로 방향성 결정
+일단 `IT 서비스`를 할 수 있을 때 해보고 싶다는 생각이 들었다. 현재 진행하고 있는 `IOT 스위치`의 경우 내년 2월까지 천천히 진행해서 발전시켜도 된다는 생각이 들었다. 그래서 내린 결정은 아래와 같다.
+1. 이번 학기에 `IT 경영학회` 참여해보기
+2. 이번 년도까지 `IT 서비스` 5개 이상 만들기
+3. IOT 스위치 만들면서 3D 모델링 공부하고 기계공학 공모전 찾아보기
