--- a/_posts/2021-07-14-feedback.md
+++ b/_posts/2021-07-14-feedback.md
@@ -1,5 +1,5 @@
 ---
-title: "프로젝트 쉐도우 복서 후기"
+title: "프로젝트 고스트 캘린더 후기"
 excerpt: "왜 창업을 하고 싶은거지? 이게 진짜 맞는거야?"
 
 tags:
@@ -14,7 +14,7 @@ date: 2021-07-14
 last_modified_at: 2021-07-14
 ---
 ## 창업 아이템 고르기
-이번에 `쉐도우 복서`라는 서비스를 만들어보면서 느낀 점은
+이번에 `고스트 캘린더`라는 서비스를 만들어보면서 느낀 점은
 1. `내가 진짜 겪은 문제라서 죽어도 해결해야한다고 생각하거나`
 대표적인 사례로 `클라썸` 같은 사례가 있다고 생각한다. 
 2. `진짜 큰 시장이라서 들어가도 괜찮거나`
